--- a/profile/templates/profile/expedition.html
+++ b/profile/templates/profile/expedition.html
@@ -36,9 +36,6 @@
       <div class="x_panel">
         <div class="x_title">
           <h2>Filtro <small></small></h2>
-          <ul class="nav navbar-right panel_toolbox">
-            <li style="float:right"><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
-          </ul>
           <div class="clearfix"></div>
         </div>
         <div class="x_content">
@@ -82,6 +79,7 @@
             </select>
           </div>
         </div>
+        <!--
         <div class="row">
           <div class="col-md-4 col-sm-12 col-xs-12 form-group">
             <label class="control-label" for="filterLicensePlate">Patente:</label>
@@ -92,8 +90,8 @@
             <label class="control-label" for="filterLicensePlate">Expedición id:</label>
             <input type="text" id="filterExpeditionId" placeholder="Patente" class="tags form-control">
           </div>
-        </div>
-
+        </div>-->
+        <div class="row">
           <div class="col-md-12 col-sm-12 col-xs-12 form-group">
             <div class="ln_solid"></div>
             <button type="submit" id="btnUpdateChart" class="btn btn-success btn-lg btn-round">Actualizar datos</button>
@@ -501,18 +499,18 @@ $(document).ready(function(){
       var from = $('#filterDateFrom').val();
       var to = $('#filterDateTo').val();
       var route = $('#filterRoute').val();
-      var licensePlate = $('#filterLicensePlate').val()!='' ? $('#filterLicensePlate').val().split(','):null;
       var dayType = $('#filterDayType').val();
       var period = $('#filterPeriod').val();
-      var expeditionId = $('#filterExpeditionId').val()!='' ? $('#filterExpeditionId').val().split(','):null;
+      //var licensePlate = $('#filterLicensePlate').val()!='' ? $('#filterLicensePlate').val().split(','):null;
+      //var expeditionId = $('#filterExpeditionId').val()!='' ? $('#filterExpeditionId').val().split(','):null;
    
       console.log(from);
       console.log(to);
       console.log(route);
-      console.log(licensePlate);
       console.log(dayType);
       console.log(period);
-      console.log(expeditionId);
+      //console.log(licensePlate);
+      //console.log(expeditionId);
 
       let data = {
         from: from,
@@ -521,19 +519,20 @@ $(document).ready(function(){
       if (route) {
         data['route'] = route;
       }
-      if (licensePlate) {
-        data['licensePlate'] = licensePlate;
-      }
       if (dayType) {
         data['dayType'] = dayType;
       }
       if (period) {
         data['period'] = period;
       }
+      /*
+      if (licensePlate) {
+        data['licensePlate'] = licensePlate;
+      }
       if (expeditionId) {
         data['expeditionId'] = expeditionId;
       }
-   
+      */
       let loading = " <i class='fa fa-cog fa-spin fa-2x fa-fw'>";
       let button = $(this).append(loading) 
       $.getJSON('getExpeditionData', data, processData)
