--- a/profile/templates/profile/expedition.html
+++ b/profile/templates/profile/expedition.html
@@ -47,6 +47,7 @@
           <div class="clearfix"></div>
         </div>
         <div class="x_content">
+          <!--
           <div class="col-md-2 col-sm-12 col-xs-12 form-group">
             <label class="control-label" for="filterDateFrom">Desde:</label>
             <input type="text" id="filterDateFrom" placeholder="Desde" class="form-control">
@@ -56,7 +57,7 @@
             <label class="control-label" for="filterDateTo">Hasta:</label>
             <input type="text" id="filterDateTo" placeholder="Hasta" class="form-control">
           </div>
-
+          -->
           <div class="col-md-2 col-sm-12 col-xs-12 form-group">
             <label class="control-label" for="filterRoute">Servicio-sentido:</label>
             <!-- <input type="text" id="filterRoute" placeholder="Servicio sentido" class="form-control">-->
@@ -475,7 +476,7 @@ $(document).ready(function(){
         { title: 'Tipo de día', data: 'dayType', searchable: true},
         { title: 'Negativo', data: 'hasNegativeValue', searchable: true},
       ],
-      order: [[1, 'desc']],
+      order: [[4, 'asc']],
       createdRow: function ( row, data, index ) {
         $(row).addClass('success');
       },
@@ -829,6 +830,9 @@ $(document).ready(function(){
           position: 'right',
           axisLabel: {
             formatter: '{value} %'
+          },
+          axisLine: {
+            onZero: true
           }
         }],
         series: series,
@@ -1005,6 +1009,7 @@ $(document).ready(function(){
     // set locale
     moment.locale('es');
     // set datetimepickers
+    /*
     $('#filterDateFrom').daterangepicker({
       singleDatePicker: true,
       singleClasses: "picker_2",
@@ -1014,7 +1019,7 @@ $(document).ready(function(){
       singleDatePicker: true,
       singleClasses: "picker_2",
       languague: 'es'
-    });
+    });*/
   
     $('#filterLicensePlate').tagsInput({defaultText: '...', minChars:6});
     $('#filterExpeditionId').tagsInput({defaultText: '...', minChars:1});
@@ -1026,8 +1031,8 @@ $(document).ready(function(){
  
     let app = new ExpeditionApp();
     $('#btnUpdateChart').click(function(){
-      var from = $('#filterDateFrom').val();
-      var to = $('#filterDateTo').val();
+      //var from = $('#filterDateFrom').val();
+      //var to = $('#filterDateTo').val();
       var route = $('#filterRoute').val();
       var dayType = $('#filterDayType').val();
       var period = $('#filterPeriod').val();
@@ -1045,8 +1050,8 @@ $(document).ready(function(){
       //console.log(expeditionId);
 
       let params = {
-        from: from,
-        to: to,
+        //from: from,
+        //to: to,
       };
       if (route) {
         params['route'] = route;
