--- a/profile/templates/profile/expedition.html
+++ b/profile/templates/profile/expedition.html
@@ -31,7 +31,7 @@
 <div class="">
   <div class="page-title">
     <div class="title_left">
-      <h3>Perfil de carga <small></small></h3>
+      <h3>Perfil de carga <small>por ruta</small></h3>
     </div>
     <div class="title_right">
     </div>
