changed file name

--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -120,9 +120,9 @@
         <div class="col-md-3 col-sm-3 col-xs-12">
           <h4><i class="fa fa-clock-o"></i> Expediciones por hora</h4>
           <div id="timePeriodChart" style="height:89px;"></div>
-          <h4><i class="fa fa-truck"></i> Patentes</h4>
+          <h4><i class="fa fa-truck"></i> Expediciones por patente</h4>
           <div id="wordcloudChart1" style="height:100px;"></div>
-          <h4><i class="fa fa-calendar"></i> Tipos de día</h4>
+          <h4><i class="fa fa-calendar"></i> Expediciones por tipo de día</h4>
           <div id="wordcloudChart2" style="height:100px;"></div>
         </div>
       </div>
