--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -224,6 +224,12 @@ $(document).ready(function(){
     // trips used to calculate average profile
     let _tripsUsed = 0;
 
+    this.getFileName = function(){
+      if(_trips.length>0){
+        return 'Perfil de carga ' + _trips[0]['route'];
+      }
+      return '';
+    }
     this.trips = function(trips){
       if(trips == undefined){
         return _trips;
@@ -785,7 +791,7 @@ $(document).ready(function(){
           feature : {
             mark : {show: false},
             restore : {show: false, title: "restaurar"},
-            saveAsImage : {show: true, title: "Guardar imagen"},
+            saveAsImage : {show: true, title: "Guardar imagen", name: _dataManager.getFileName()},
             dataView: {
               show: true, 
               title: 'Ver datos',
@@ -861,7 +867,7 @@ $(document).ready(function(){
     }
  
     let trips = dataSource.trips;
-    let dataManager = new DataManager()
+    let dataManager = new DataManager();
     let tripGroupXAxisData = [];
 
     for(let expeditionId in trips){
